--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
